--- a/stockMarket/templates/home.html
+++ b/stockMarket/templates/home.html
@@ -18,10 +18,10 @@
 		quoteType: ${{ ticker.quoteType }}<br/>
 		Previous Close: {{ ticker.previousClose }}<br/>
 		Market Cap: {{ ticker.marketCap }}<br/>
-		50Wk Range: {{ ticker.fiftyTwoWeekRange }}<br/>
+		52Wk Range: {{ ticker.fiftyTwoWeekRange }}<br/>
 		PE: {{ ticker.trailingPE }}<br/>
 		bidSize: {{ ticker.bidSize }}<br/>
-		askSize: {{ ticker.askSize }}<br/>
+		askSize: {{ ticker.askSize }}<br/><br/>
 
     {% endfor %}
 
