--- a/stockMarket/templates/add_stock.html
+++ b/stockMarket/templates/add_stock.html
@@ -5,52 +5,81 @@
 <h2><b>Add Stock</b></h2>
 
 <!-- <form action="{% url 'add_stock' %}" class="d-flex form-inline my-2 my-lg-0" method="POST"> -->
-<form action="{% url 'add_stock' %}" class="row g-2" method="POST">
+<form action="{% url 'add_stock' %}" class="row g-2" method="POST" required minlength="1" maxlength="150">
     {% csrf_token %}
-    <input class="col-auto" type="search" placeholder="Add To Portfolio" aria-label="Search" name="ticker">
+    <input class="col-auto" type="search" id="txt" placeholder="Add To Portfolio" aria-label="Search" name="ticker">
     &nbsp;
-    <button class="btn btnstyle btn-outline-secondary col-auto" type="submit">Add</button>
+    <button class="btn btnstyle btn-outline-secondary col-auto" onclick="return Validate()" type="submit">Add</button>
 </form>
+
+          <script type="text/javascript">
+            function Validate() {
+                var txt = document.getElementById("txt").value;
+                if (txt.length < 1 ) {
+                    alert("please enter something!!");
+                    return false;
+                }
+
+                if ( txt.length > 150 ) {
+                    alert("input too large!!");
+                    return false;
+                }
+
+                if( !isAlpha(txt) ){
+                  alert("invalid text input!!");
+                  return false;
+                }
+
+                return true;
+            }
+
+            function isAlpha(str) {
+              return /^[a-zA-Z,]+$/.test(str);
+            }
+            </script>
+
 <br/> <br/>
 
-<table class="table table-primary table-striped table-hover table-bordered table-responsive ">
-    <!-- to avoid horizontal scrool use the below div format -->
-<!-- <table class="table table-primary table-striped table-hover table-bordered "> -->
-  <thead class="table-dark">
-    <tr>
-      <th scope="col">Company Name</th>
-      <th scope="col">Ticker Symbol</th>
-      <th scope="col">Stock Price</th>
-      <th scope="col">Previous Close</th>
-      <th scope="col">Market Cap</th>
-      <th scope="col">PE</th>
-      <th scope="col">52 Week Range</th>
-      <th scope="col">Bid-Ask Size</th>
-      <th scope="col">Quote Type</th>
-      <th scope="col">Delete Stock</th>
-    </tr>
-  </thead>
-  <tbody>
-{% if tickers %}
+    <!-- <table class="table table-hover table-bordered table-responsive"> -->
+    <!-- to avoid horizontal scrool remove the table-responsive div -->
+    <div class="table-responsive">
+    <table class="table table-primary table-striped table-hover table-bordered align-middle">
+      <thead class="table-dark">
+      <tr>
+        <th scope="col">Company Name</th>
+        <th scope="col">Ticker Symbol</th>
+        <th scope="col">Stock Price</th>
+        <th scope="col">Previous Close</th>
+        <th scope="col">Market Cap</th>
+        <th scope="col">PE</th>
+        <th scope="col">52 Week Range</th>
+        <th scope="col">Bid-Ask Size</th>
+        <th scope="col">Quote Type</th>
+        <th scope="col">Delete Stock</th>
+      </tr>
+    </thead>
+    <tbody>
+  {% if tickers %}
 
 
-        {% for symb,ticker in zipped_data %}
-            <tr>
-            <th scope="row">{{ ticker.company }}</th>
-            <td>{{ ticker.symbol }}</td>
-            <td>${{ ticker.stockPrice }}</td>
-            <td>${{ ticker.previousClose }}</td>
-            <td>${{ ticker.marketCap }}</td>
-            <td>${{ ticker.trailingPE }}</td>
-            <td>${{ ticker.fiftyTwoWeekRange }}</td>
-            <td>{{ ticker.bidSize }} - {{ticker.askSize}}</td>
-            <td>{{ ticker.quoteType }}</td>
-            <td><a href="{% url 'delete' symb.id %}">delete</a></td>
-            </tr>
-        {% endfor %}
+          {% for symb,ticker in zipped_data %}
+              <tr>
+              <th scope="row">{{ ticker.company }}</th>
+              <td>{{ ticker.symbol }}</td>
+              <td>${{ ticker.stockPrice }}</td>
+              <td>${{ ticker.previousClose }}</td>
+              <td>${{ ticker.marketCap }}</td>
+              <td>${{ ticker.trailingPE }}</td>
+              <td>${{ ticker.fiftyTwoWeekRange }}</td>
+              <td>{{ ticker.bidSize }} - {{ticker.askSize}}</td>
+              <td>{{ ticker.quoteType }}</td>
+              <td><a href="{% url 'delete' symb.id %}">delete</a></td>
+              </tr>
+          {% endfor %}
 
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 <!-- this endif should be places after the end of table only -->
 {% endif%}
 
