--- a/stockMarket/templates/base.html
+++ b/stockMarket/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 
-    <title>Base html</title>
+    <title>Stock</title>
     <style>
     	/* .card-color {background-color: #f6f9f7;} */
       .btnstyle:hover {background: green;}
@@ -38,7 +38,7 @@
             <div class="d-flex flex-row bd-highlight ">
             <!-- <div class="d-flex justify-content-end"> -->
                 <!-- <input class="form-control mx-auto mr-sm-2" type="search" placeholder="Enter latitude" aria-label="Search" name="latitude"> -->
-                <input class="form-control mr-sm-2" id="txt" type="text" placeholder="Get stock quote" aria-label="Search" name="ticker">
+                <input class="form-control mr-sm-2" id="txt" type="text" placeholder="Get Stock Quote By Ticker" aria-label="Search" name="ticker">
                 &nbsp;
                 <button  class=" btnstyle btn btn-outline-secondary my-2 my-sm-0" onclick="return Validate()" type="submit">Search</button>
             </div>
